# PIS

./: Makefile  README.md
auth_back/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
auth_back/app/: main.py
auth_back/app/api/: openapi.py
auth_back/app/api/v1/: __init__.py  auth.py  user.py
auth_back/app/core/: config.py  email_config.py
auth_back/app/db/: session.py
auth_back/app/db/crud/: black_list.py  user.py
auth_back/app/db/model/: __init__.py  black_list.py  user.py
auth_back/app/exceptions/: __init__.py  auth.py  base.py  email.py  user.py
auth_back/app/schemas/: mail.py  success_msg.py  token.py  user.py
auth_back/app/services/: auth.py  user.py
auth_back/app/services/mail/: mail.py
auth_back/app/services/security/: hash.py  jwt.py
auth_back/app/templates/: reset_password.html  reset_password.txt  verify_email.html  verify_email.txt
auth_back/migrations/: env.py
auth_back/migrations/versions/: 5d2fa0efb06b_init.py
auth_back/tests/: conftest.py
auth_back/tests/integration/: test_auth_api.py  test_users_api.py
auth_back/tests/unit/core/: test_config.py  test_email_config.py
auth_back/tests/unit/crud/: test_black_list_crud.py  test_users_crud.py
auth_back/tests/unit/services/: test_auth_service.py  test_users_service.py
auth_back/tests/unit/services/mail/: test_mail_service.py
auth_back/tests/unit/services/security/: test_hash_service.py  test_jwt_service.py
auth_front/: Dockerfile  app.js  docker-compose.yml  index.html  nginx.conf  styles.css
docs/: Postman.json  readme.docx  ~$readme.docx
