[project]
name = "auth-back"
version = "0.1.0"
description = "Сервис аутентификации"
authors = [
    {name = "Kudryavtsev Tikhon",email = "tikhon.kudryavtsev@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
"fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.27",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.2.0",
    "fastapi-mail>=1.4.1",
    "jinja2>=3.1.3",
    "alembic>=1.13.1",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pytest (>=9.0.2,<10.0.0)",
    "fakeredis (>=2.33.0,<3.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "httpx>=0.24",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0"
]

[tool.poetry]
package-mode = false  # Важная настройка для сервисов (отключает поиск пакетов для сборки)

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
